[package]
name = "cryptolib"
version = "0.1.0"
edition = "2021"
authors = ["TN3W"]
description = "A secure high-level implementation of cryptographic primitives with post-quantum support"
license = "Apache-2.0"
repository = "https://github.com/TN3W/cryptolib"
keywords = ["cryptography", "security", "post-quantum", "encryption", "signatures"]
categories = ["cryptography", "authentication"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = 0
overflow-checks = false
incremental = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[lib]
name = "cryptolib"
path = "src/lib.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
ring = "0.17.8"
rand = "0.8.5"
constant_time_eq = "0.3.1"
arrayref = "0.3.9"
rsa = { version = "0.9.6", features = ["pem", "sha2"] }
sha2 = "0.10.8"
base64 = "0.22.1"
digest = "0.10.7"
zeroize = "1.6"
libc = "0.2"
pbkdf2 = { version = "0.12", features = ["simple"] }
pqcrypto-dilithium = "0.5.0"
pqcrypto-kyber = "0.8.0"
pqcrypto-traits = "0.3.5"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
test-case = "3.3"

[[example]]
name = "aes"
path = "examples/aes_example.rs"

[[example]]
name = "rsa"
path = "examples/rsa_example.rs"

[[example]]
name = "kyber"
path = "examples/kyber_example.rs"

[[example]]
name = "dilithium"
path = "examples/dilithium_example.rs"

[[example]]
name = "pbkdf2"
path = "examples/pbkdf2_example.rs"

[[example]]
name = "argon2id"
path = "examples/argon2id_example.rs"
